@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4625 2004/01/28 12:34:47 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4626 2004/01/28 12:49:23 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -511,3 +511,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated nedit to 5.4nb1 [xtraeme 2004-01-28]
 	Updated dinotrace to 9.1knb1 [xtraeme 2004-01-28]
 	Updated electric to 6.05nb1 [xtraeme 2004-01-28]
+	Updated mpg123-nas to 0.59.18nb2 [xtraeme 2004-01-28]
